--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownEdit/MarkdownEdit.razor
@@ -52,6 +52,6 @@
             .Add(Class)
             .Add("first-line-indent", firstLineIndent)
             .Add("task-list-line-through", taskListLineThrough)
-            .Add("outline_hide", !Outline)
+            .Add("vditor-outline_hide", !Outline)
             .ToString();
 }
