💄 style: Remove dialog max height

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ErrorDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ErrorDialog.razor
@@ -12,7 +12,7 @@
             </MIcon>
             <wc-auto-scroll-text>@(I18n.T("Error"))</wc-auto-scroll-text>
         </MCardTitle>
-        <MCardText Class="pb-0 scroll-show" Style="max-height:300px;">
+        <MCardText Class="pb-0 scroll-show">
             @Text
         </MCardText>
         <MCardActions>
