--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectChipDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectChipDialog.razor
@@ -23,7 +23,7 @@
                 <MIcon>close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText Class="scroll-show pb-0 mb-5" Style="max-height:300px;">
+        <MCardText Class="scroll-show pb-0 mb-5">
             <MChipGroup Value="internalValue"
                         ValueChanged="InternalValueChanged"
                         Values="internalValues"
