--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -50,7 +50,8 @@
                                 Multiple="Multiple">
                     <Virtualize Items="internalItems"
                                 ItemSize="64"
-                                Context="item">
+                                Context="item"
+                                OverscanCount="30">
                         <MListItem @key="item.Id"
                                    Class="px-10"
                                    TwoLine
