--- a/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCardList.razor
@@ -7,7 +7,8 @@
                         IsFixed="true">
             <Virtualize Items="InternalValue"
                         ItemSize="60"
-                        Context="item">
+                        Context="item"
+                        OverscanCount="30">
                 <TagCard @key="item.Id"
                          Value="item"
                          OnMenu="OpenMenu"
