--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
@@ -39,7 +39,8 @@
 
     <Virtualize Items="_appFeatures"
                 ItemSize="@ItemHeight"
-                Context="item">
+                Context="item"
+                OverscanCount="30">
         <MCard @key="item"
                Class="mb-3"
                Elevation="0"
