🐛 fix: App lock can not cancle

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/NumberPasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/NumberPasswordDialog.razor
@@ -17,7 +17,7 @@
                 <div style="width:100%;height:fit-content;">
                     <NumberLock Title="@I18n.T(string.IsNullOrEmpty(firstValue) ? "Please enter password" : "Please enter the password again")"
                                 Value="@numberLockValue"
-                                OnFinish="HandleNumberLockOnFinish">
+                                OnFinish="HandleOnFinish">
                     </NumberLock>
                 </div>
             </div>
