--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/PatternPasswordDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/PatternPasswordDialog.razor
@@ -18,7 +18,7 @@
                 <div style="width:100%;height:fit-content;">
                     <GestureUnlock @ref="gestureUnlock"
                                    Title="@I18n.T(string.IsNullOrEmpty(firstValue) ? "Please draw a pattern" : "Please draw the pattern again")"
-                                   OnFinish="HandleNumberLockOnFinish">
+                                   OnFinish="HandleOnFinish">
                     </GestureUnlock>
                 </div>
             </div>
