--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -278,7 +278,7 @@
                     </MListItemTitle>
                     <MListItemSubtitle>
                         <wc-auto-scroll-text>
-                            @(I18n.T("When adding files, use the original file name. The same file will no longer be kept in one copy."))</wc-auto-scroll-text>
+                            @(I18n.T("When adding files, use the original file name. The file of same Sha256 will no longer be saved as only one copy."))</wc-auto-scroll-text>
                     </MListItemSubtitle>
                 </MListItemContent>
                 <MListItemAction>
