🐛 fix: App lock can not enable

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/AppLockSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/AppLockSetting/AppLockSetting.razor
@@ -104,13 +104,13 @@
 </ScrollContainer>
 
 <NumberPasswordDialog @bind-Visible="showNumberLock"
-                      Value="appLockNumberPassword"
+                      Value="@appLockNumberPassword"
                       OnValidate="ValidateNumberPassword"
                       OnFinish="SetAppLockNumberPasswordAsync">
 </NumberPasswordDialog>
 
 <PatternPasswordDialog @bind-Visible="showPatternLock"
-                       Value="appLockPatternPassword"
+                       Value="@appLockPatternPassword"
                        OnValidate="ValidatePatternPassword"
                        OnFinish="SetAppLockPatternPasswordAsync">
 </PatternPasswordDialog>
