🆕 feat: Link card (Card style link)

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -269,6 +269,29 @@
             <MListItem>
                 <MListItemIcon>
                     <MIcon>
+                        stack
+                    </MIcon>
+                </MListItemIcon>
+                <MListItemContent>
+                    <MListItemTitle>
+                        <wc-auto-scroll-text>@(I18n.T("Link card"))</wc-auto-scroll-text>
+                    </MListItemTitle>
+                    <MListItemSubtitle>
+                        <wc-auto-scroll-text>@(I18n.T("Generate card style links for hyperlinks"))</wc-auto-scroll-text>
+                    </MListItemSubtitle>
+                </MListItemContent>
+                <MListItemAction>
+                    <SettingSwitch @bind-Value="linkCard"
+                                   SettingKey="@nameof(Setting.LinkCard)">
+                    </SettingSwitch>
+                </MListItemAction>
+            </MListItem>
+
+            <MDivider Class="mx-5"></MDivider>
+
+            <MListItem>
+                <MListItemIcon>
+                    <MIcon>
                         raw_on
                     </MIcon>
                 </MListItemIcon>
