--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -280,7 +280,7 @@ html {
 
 .right-bottom-float-area {
     display: grid;
-    grid-template-columns: 1fr; 
+    grid-template-columns: 1fr;
     row-gap: 8px;
     position: fixed;
     z-index: 1;
@@ -494,7 +494,7 @@ html.m-overlay-scroll-blocked {
     padding-top: 10px;
     padding-left: 12px;
     padding-right: 12px;
-    padding-bottom:12px;
+    padding-bottom: 12px;
     white-space: break-spaces;
     word-break: break-all;
     align-self: stretch;
@@ -550,9 +550,9 @@ html.m-overlay-scroll-blocked {
         flex-grow: 1;
     }
 
-    .diary-info-btn {
-        max-width: 100%;
-    }
+.diary-info-btn {
+    max-width: 100%;
+}
 
     .diary-info-btn .m-btn__content {
         max-width: 100%;
@@ -641,4 +641,83 @@ html.m-overlay-scroll-blocked {
     .flex-sm-1 {
         flex: 1;
     }
+}
+
+.link-card {
+    display: flex;
+    max-width: 600px;
+    margin: 16px auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    overflow: hidden;
+    transition: transform 0.2s, box-shadow 0.2s;
+    text-decoration: none;
+    background-color: rgba(var(--m-theme-surface-container-low));
+    color: rgba(var(--m-theme-on-surface), var(--m-high-emphasis-opacity)) !important;
+}
+
+    .link-card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+
+.link-card__image {
+    width: 140px;
+    min-width: 140px;
+    height: 140px;
+    position: relative;
+    overflow: hidden;
+    padding: 16px;
+}
+
+    .link-card__image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.3s;
+    }
+
+.link-card:hover .link-card__image img {
+    transform: scale(1.05);
+}
+
+.link-card__content {
+    padding: 16px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.link-card__title {
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 8px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.link-card__description {
+    font-size: 14px;
+    margin-bottom: 12px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    opacity: var(--m-medium-emphasis-opacity);
+}
+
+.link-card__url {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    color: rgba(var(--m-theme-on-surface), 0.5) !important;
+}
+
+.link-card__favicon {
+    width: 16px;
+    height: 16px;
+    margin-right: 6px;
 }
