🐛 fix: Not display setting for enable outline on mobile devices

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/OutlineSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/OutlineSetting.razor
@@ -11,7 +11,7 @@
            Elevation="0"
            Rounded="@("lg")">
         <MList Class="py-0">
-            <MListItem Class="hidden-sm-and-down">
+            <MListItem>
                 <MListItemIcon>
                     <MIcon>
                         format_list_bulleted
@@ -27,7 +27,7 @@
                 </MListItemAction>
             </MListItem>
 
-            <MDivider Class="mx-5 hidden-sm-and-down"></MDivider>
+            <MDivider Class="mx-5"></MDivider>
 
             <MListItem>
                 <MListItemIcon>
