--- a/src/SwashbucklerDiary.Rcl/Components/PageCacheContainer/PageCacheContainer.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/PageCacheContainer/PageCacheContainer.razor
@@ -2,7 +2,7 @@
 @inherits MyComponentBase
 
 <PPageContainerReplacement @ref="pPageContainerReplacement"
-                           PageUpdate="NavigateController.AllowPageUpdate"
+                           PageUpdate="allowPageUpdate"
                            OnLocationChanged="HandlePageCacheUpdate">
     @ChildContent
 </PPageContainerReplacement>
