--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
                     <MainLayoutNavDrawer Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutNavDrawer>
 
                     <MMain>
-                        <PageCacheContainer>
+                        <PageCacheContainer PermanentPaths="permanentPaths">
                             @Body
                         </PageCacheContainer>
                     </MMain>
