--- a/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.WebAssembly/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
                     <MainLayoutNavDrawer Items="navigationButtons" IsPermanentPath="IsPermanentPath"></MainLayoutNavDrawer>
 
                     <MMain>
-                        <PageCacheContainer>
+                        <PageCacheContainer PermanentPaths="permanentPaths">
                             @Body
                         </PageCacheContainer>
                     </MMain>
