♻️ refactor: Move js to razor.js

--- a/src/SwashbucklerDiary.Rcl/Components/BackTopButton/BackTopButton.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/BackTopButton/BackTopButton.razor
@@ -1,4 +1,5 @@
 @namespace SwashbucklerDiary.Rcl.Components
+@inherits MyComponentBase
 
 <MyFloatButton @ref="myFloatButton"
                Class="@InternalClass"
