--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
@@ -86,7 +86,7 @@
             {
                 <SimpleMarkdownPreview Value="@text"
                                        Style="pointer-events:none;"
-                                       Patch="false"
+                                       Optimize="false"
                                        Options="_markdownOptions">
                 </SimpleMarkdownPreview>
             }
