--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
@@ -31,7 +31,7 @@
             </MButton>
         </MyAppBar>
         <ScrollContainer ContentClass="pa-0">
-            <div @ref="moblieOutlineContainerElement"
+            <div @ref="moblieOutlineElement"
                  style="display: block !important;">
             </div>
         </ScrollContainer>
