--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/SimpleMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/SimpleMarkdownPreview.razor
@@ -4,6 +4,6 @@
                        Class="@Class"
                        Style="@Style"
                        Simple
-                       Patch="Patch"
+                       Optimize="Optimize"
                        Options="_options">
 </VditorMarkdownPreview>
